--- a/app/static/css/style_home.css
+++ b/app/static/css/style_home.css
@@ -1,4 +1,4 @@
-  .container {
+  #features-container {
     max-width: 960px;
     margin: 0 auto;
     padding: 40px 20px;
@@ -11,13 +11,14 @@
     margin: 0 auto 40px;
     padding: 40px;
     border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-    0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.1);
     position: relative;
     text-align: center;
   }
   
-  .card h2 {
+  .card h3 {
+    font-weight: bold;
+    color: #0c8a7a;
     font-size: 25px;
     margin-bottom: 20px;
   }
@@ -40,13 +41,13 @@
 
   .card a.button {
     background-color: #74AA9C;
-    background: linear-gradient(to right, #74AA9C, #0e4135);
+    background: linear-gradient(to right, #74AA9C, #0c8a7a);
     color: #fff;
     font-size: 16px;
   }
   
   .card a.button:hover {
-    background: #0e4135;
+    background: #0c8a7a;
   }
   
   .card-container {
@@ -68,37 +69,36 @@
   }
 
   .card-container .card a:hover {
-    background-color: #0e4135;
+    background-color: #0c8a7a;
   }
   
   
-
-  @media screen and (max-width: 768px) {
-    .card {
-      padding: 20px;
-    }
-    
-    .card h2 {
-      font-size: 24px;
-    }
-    
-    .card p {
-      font-size: 16px;
-    }
-    
-    .card a {
-      font-size: 16px;
-      padding: 10px 20px;
-    }
-    
-    .card-container .card {
-      width: 80%;
-    }
-  }
-  
-
 #home-link {
-    font-weight: bold;
+    color: #0c8a7a;
 }
   
+
+@media screen and (max-width: 768px) {
+  .card {
+    padding: 20px;
+  }
+  
+  .card h2 {
+    font-size: 24px;
+  }
+  
+  .card p {
+    font-size: 16px;
+  }
+  
+  .card a {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
+  
+  .card-container .card {
+    width: 80%;
+  }
+}
+
 
