--- a/app/static/css/style_profile.css
+++ b/app/static/css/style_profile.css
@@ -1,23 +1,16 @@
-* {
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-}
 
-body {
-    margin-top: 160px;
-    background-color: #f9f9fa;
-}
-
-.card {
+.profile-card {
     max-width: 800px;
     margin: 40px auto;
+    margin-top: 20px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     display: flex;
+    
 }
 
-.container-left {
+.profile-container-left {
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -46,31 +39,69 @@ body {
     justify-content: center;
 }
 
+#user-name {
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 15px;
+}
 
-.container-right {
+
+#english-level {
+    color: #0c8a7a;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+
+.profile-container-right {
     width: 60%;
     padding: 30px;
 }
 
 .account-section,
 .tokens-section {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
-.account-section h3,
-.tokens-section h3 {
-    font-size: 14px;
-    margin-bottom: 10px;
-}
-
-.english-level {
-    font-size: 14px;
+.account-section h4,
+.tokens-section h4 {
+    color: #0c8a7a;
     font-weight: bold;
-    color: #74AA9C;
+    margin-top: 10px;
+    font-size: 16px;
+    margin-bottom: 5px;
 }
+
+.account-section p,
+.tokens-section p {
+    font-size: 14px;
+}
+
 
 .profile-details h2 + p {
     margin-top: 10px;
+}
+
+
+
+.profile-container-right h3 {
+    font-size: 14px;
+}
+
+.profile-container-right p {
+    font-size: 12px;
+    margin-bottom: 0px;
+}
+
+.profile-container-right p:not(:last-child) {
+    margin-bottom: 2px;
+}
+
+
+#small-note {
+    margin-top: 10px;
+    font-size: 10px;
 }
 
 .account-section::before,
@@ -80,29 +111,13 @@ body {
     display: block;
     height: 1px;
     background-color: #ccc;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
-.container-right h3 {
-    font-size: 14px;
-}
 
-.container-right p {
-    font-size: 12px;
-}
-
-.container-right p:not(:last-child) {
-    margin-bottom: 2px;
-}
-
-
-.note {
-    font-size: 10px;
-}
-
-
-.container {
+.history-container {
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -114,9 +129,12 @@ body {
     overflow-y: auto;
   }
 
-  .container h3 {
+  .history-container h3 {
+    font-weight: bold;
     margin-top: -25px;
-    font-size: 14px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: #0c8a7a;
   }
   
   
@@ -141,27 +159,24 @@ body {
 }
 
 #profile-link {
-    font-weight: bold;
+    color: #0c8a7a;
 }
 
 
 /* RESPONSIVE */
 /* Responsive Styles */
 @media (max-width: 768px) {
-    body {
-        margin-top: 180px;
-    }
-
-    .card {
+    .profile-card {
         flex-direction: column;
+        margin-bottom: 20px;
     }
 
-    .container-left {
+    .profile-container-left {
         width: 100%;
         padding: 20px;
     }
 
-    .container-right {
+    .profile-container-right {
         width: 100%;
         padding: 20px;
     }
@@ -175,26 +190,23 @@ body {
         font-size: 16px;
     }
 
-    .container-right h3 {
+    .profile-container-right h3 {
         font-size: 12px;
     }
 
-    .container-right p {
+    .profile-container-right p {
         font-size: 10px;
     }
 }
 
 @media (max-width: 480px) {
-    body {
-        margin-top: 200px;
-    }
-
-    .card {
+    .profile-card {
         margin: 20px auto;
+        margin-bottom: 20px;
     }
 
-    .container-left,
-    .container-right {
+    .profile-container-left,
+    .profile-container-right {
         padding: 15px;
     }
 
@@ -207,11 +219,11 @@ body {
         font-size: 14px;
     }
 
-    .container-right h3 {
+    .profile-container-right h3 {
         font-size: 10px;
     }
 
-    .container-right p {
+    .profile-container-right p {
         font-size: 8px;
     }
 }
