--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -8,7 +8,100 @@
 {% endblock %}
 
 {% block content %}
+<main id="main">
+<!--==========================
+      About Section
+    ============================-->
+    <section id="about" class="wow fadeInUp">
+        <div class="container">
+          <div class="section-header">
+            <h2>About Us</h2>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 about-img">
+              <img src="img/about-img.jpg" alt="">
+            </div>
+  
+            <div class="col-lg-6 content">
+              <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+              <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+  
+              <ul>
+                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              </ul>
+  
+            </div>
+          </div>
+  
+        </div>
+      </section><!-- #about -->
+  
+  
+      <!--==========================
+        Our Team Section
+      ============================-->
+      <section id="team" class="wow fadeInUp">
+        <div class="container">
+          <div class="section-header">
+            <h2>Our Team</h2>
+          </div>
+          <div class="row">
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/team-1.jpg" alt=""></div>
+                <div class="details">
+                  <h4>Walter White</h4>
+                  <span>Chief Executive Officer</span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/team-2.jpg" alt=""></div>
+                <div class="details">
+                  <h4>Sarah Jhinson</h4>
+                  <span>Product Manager</span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/team-3.jpg" alt=""></div>
+                <div class="details">
+                  <h4>William Anderson</h4>
+                  <span>CTO</span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
 
+          </div>
+  
+        </div>
+      </section><!-- #team -->
+  
+</main>
 {% endblock %}
 
 
