--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -41,7 +41,7 @@
                     <p>Tokens Used: {{ tokens_used }} </p>
                     <p><small id="small-note"><em>
                         Note: 
-                        <br> - You are using tokens to learn with AI 
+                        <br> - You use tokens to learn with AI 
                         <br> - You will get free 10k tokens per hour up to 100k tokens
                         </em></small>
                     </p>
