--- a/app/static/css/temp_style.css
+++ b/app/static/css/temp_style.css
@@ -445,6 +445,22 @@ h6 {
   outline: none;
 }
 
+#mobile-nav ul li a button {
+  color:#fff;
+}
+
+
+#mobile-nav ul li a #login-button:hover {
+  color:#fff;
+  background-color: #0c8a7a;
+}
+
+#mobile-nav ul li a #logout-button:hover {
+  color:#fff;
+  background-color: red;
+}
+
+
 #mobile-nav ul li a:hover {
   color: #fff;
 }
@@ -535,7 +551,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #about {
-  padding: 60px 0 30px 0;
+  padding: 30px 0 30px 0;
 }
 
 #about .about-img {
@@ -1169,7 +1185,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   .logout-button:hover {
     border-color: none;
     color: black;
-    background-color: red;
+    background-color: #e63946;
   }
 
   .hide {
@@ -1204,7 +1220,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: white;
     border: none;
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 5px 15px;
     cursor: pointer;
   }
   
