--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="{{ url_for('static', filename='img/favicon.png') }}" rel="icon">
-  <link href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" rel="apple-touch-icon">
+  <link href="{{ url_for('static', filename='img/icon/pel_icon.png') }}" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
@@ -49,7 +48,7 @@
       <div class="container">
 
         <div id="logo" class="pull-left">
-          <h1><a href="/" class="scrollto">E-PEL</a></h1>
+          <h1><a href="/" class="scrollto">PEL</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
         </div>
