--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style_contact.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -16,7 +17,9 @@
         <div class="container">
           <div class="section-header">
             <h2>Contact Us</h2>
-            <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+            <p>Please don't hesitate to get in touch with us if you have any questions, suggestions, or need assistance.
+              Your feedback matters to us, and we strive to respond promptly. Join us on your English learning journey!"
+            </p>
           </div>
   
           <div class="row contact-info">
@@ -25,7 +28,7 @@
               <div class="contact-address">
                 <i class="ion-ios-location-outline"></i>
                 <h3>Address</h3>
-                <address>A108 Adam Street, NY 535022, USA</address>
+                <address>Jenderal Sudirman Street, Senayan, Jakarta, Indonesia</address>
               </div>
             </div>
   
@@ -33,7 +36,7 @@
               <div class="contact-phone">
                 <i class="ion-ios-telephone-outline"></i>
                 <h3>Phone Number</h3>
-                <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                <p><a href="tel:+622157946093">(021) 57946093</a></p>
               </div>
             </div>
   
@@ -41,43 +44,47 @@
               <div class="contact-email">
                 <i class="ion-ios-email-outline"></i>
                 <h3>Email</h3>
-                <p><a href="mailto:info@example.com">info@example.com</a></p>
+                <p><a href="mailto:info@example.com">pel.app.dikti@gmail.com</a></p>
               </div>
             </div>
   
           </div>
         </div>
   
-        <!-- <div class="container mb-4">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div> -->
-  
+        <div class="container mb-4">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.513968899548!2d106.8034629!3d-6.2239596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f154dd05561f%3A0x1e55c10cb4f8c7f0!2sSekretariat%20Direktorat%20Jenderal%20Dikti!5e0!3m2!1sen!2sid!4v1569602786924!5m2!1sen!2sid" width="100%" height="380" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        
         <div class="container">
           <div class="form">
             <div id="sendmessage">Your message has been sent. Thank you!</div>
             <div id="errormessage"></div>
-            <form action="" method="post" role="form" class="contactForm">
+            <form action="" method="post" role="form" class="contactForm" id="myForm">
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control rounded" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control rounded" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                   <div class="validation"></div>
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                <input type="text" class="form-control rounded" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                 <div class="validation"></div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <textarea class="form-control rounded" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                 <div class="validation"></div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary rounded">Send Message</button>
+              </div>
             </form>
           </div>
+        </div>
+        
   
         </div>
       </section><!-- #contact -->
