--- a/app/templates/placement_test.html
+++ b/app/templates/placement_test.html
@@ -4,9 +4,10 @@
     <title>Placement Test</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    {% include 'favicon.html' %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/exit_button.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_placement_test.css') }}">
     
   </head>
@@ -29,20 +30,13 @@
           </div>
         </div>
 
-        <button id="exit-button" class="exit-button">Exit</button>
-        <div id="alert-exit-dialog" class="hide">
-          <div id="alert-exit-message">Are you sure you want to exit?</div>
-          <div id="alert-exit-buttons">
-            <button id="alert-exit-ok">Yes</button>
-            <button id="alert-exit-cancel">Cancel</button>
-          </div>
-        </div>
-
+        {% include 'exit_button.html' %}
+        
       </main>
       
       
     
     <script src="{{ url_for('static', filename='js/script_placement_test.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/exit_button.js') }}"></script>
+    
   </body>
 </html>
