--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -4,6 +4,9 @@
     <title>Registration</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    {% include 'favicon.html' %}
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -12,6 +15,9 @@
 <body>
     <main id="main">
         <div class="container" id="container">
+            <div class="overlay-mobile">
+                <h1>Personalized English Learning</h1>
+            </div>
 
             <div class="form-container sign-up-container">
                 <form id="form-register" action="#">
@@ -25,10 +31,11 @@
 
                     <span>Or register with:</span>
                     <div class="social-container">
-                        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                        <a href="register-google" class="social"><i class="fab fa-google-plus-g"></i></a>
                     </div> 
                 </form>
+                <!-- Switch Buttons -->
+                <button class="switch-button" id="switch-login-btn-mobile">Login Here</button>
             </div>
             <div class="form-container sign-in-container">
                 <form id="form-login" action="#">
@@ -41,26 +48,30 @@
 
                     <span>Or login with:</span>
                     <div class="social-container">
-                        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                        <a href="login-google" class="social"><i class="fab fa-google-plus-g"></i></a>
                     </div>
                 </form>
+                <button class="switch-button" id="switch-register-btn-mobile">Register Here</button>
             </div>
             <div class="overlay-container">
                 <div class="overlay">
                     <div class="overlay-panel overlay-left">
                         <h1>Personalized English Learning</h1>
-                        <p>Log in to your account here!</p>
-                        <button class="ghost" id="switch-login">Login</button>
+                        <p>Login to your account!</p>
+                        <button class="ghost" id="switch-login">Login Here</button>
                     </div>
                     <div class="overlay-panel overlay-right">
                         <h1>Personalized English Learning</h1>
-                        <p>Register your account here!</p>
-                        <button class="ghost" id="switch-register">Register</button>
+                        <p>Register your account!</p>
+                        <button class="ghost" id="switch-register">Register Here</button>
                     </div>
                 </div>
             </div>
+
+
         </div>
+
+
     </main>
 
     <script src="{{ url_for('static', filename='js/script_registration.js') }}"></script>
