--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -41,11 +41,11 @@
 		<div class="container">
 		  <div class="section-header">
 			<h2>Features</h2>
-			<p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+			<p>The Personalized English Learning application provides an interactive way to learn English with the help of artificial intelligence. It offers three main features: the learning feature, the placement test feature, and the study plan feature. </p>
 			<div id="features-container">
 				<div id="features-card" class="card">
 					<h3>Learning</h3>
-					<p>Welcome to Personalized English Learning. <br> Learning with Artificial Intelligence to help you improve your English skills.</p>
+					<p>Learn English adaptively, interactively, and personalized.</p>
 					<a id="btn-learning" href="learning" class="button">Start Learning</a>
 				</div>
 				<div class="card-container">
