--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,7 @@
 
         <div id="logo" class="pull-left">
           <h1><a href="/" class="scrollto">PEL</a></h1>
+          <!-- <img src="{{ url_for('static', filename='img/icon/pel_logo.css') }}" alt=""> -->
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
         </div>
