Update files: app.py, about.html, base.html, add style_how_to_use.css and how_to_use.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -58,6 +58,7 @@
           <ul class="nav-menu">
             <li><a id='home-link' href="home">Home</a></li>
             <li><a id='profile-link' href="profile">Profile</a></li>
+            <li><a id='how_to_use-link' href="how-to-use">How to Use</a></li>
             <li><a id='about-link' href="about">About Us</a></li>
             <li><a id='contact-link' href="contact">Contact</a></li>
             <li><a href="registration"><button id="login-button" class="login-button">Login</button></a></li>
@@ -87,7 +88,7 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
+          &copy; This project is licensed under <strong>The ChatGPT Team Intern at Dirjen Diktiristek X MSIB 4 Kemendikbudristek RI</strong> 2023
         </div>
         <div class="credits">
           <!--
